# Local-AI-Agent-Starter-Kit

./: .gitignore  README.md  pyproject.toml
data/: wow.xml
src/: cli.py
src/config/: settings.py
src/graph/: __init__.py  types.py  workflow.py
src/graph/nodes/: chatbot.py  tools.py
src/tools/: __init__.py  datetime_tool.py  vectorstore.py  web_search.py
tests/graph/: test_workflow.py
tests/tools/: test_datetime_tool.py  test_web_search_tool.py
