[tool.poetry]
name = "ai-agent"
version = "0.1.0"
description = "A LangChain-based agent with a graph workflow for tool execution"
authors = ["tessierjoachim@gmail.com"]
readme = "README.md"
packages = [{include = "**/*.py", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
langchain = "^0.3.25"
langchain-core = "^0.3.59"
langchain-ollama = "^0.3.2"
langgraph = "^0.4.3"
ipython = "^8.22.2"
langchain-community = "^0.3.23"
duckduckgo-search = "^8.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
agent = "cli:main"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]
python_files = [
    "test_*.py"
]
asyncio_mode = "auto" 